--- a/webpage.html
+++ b/webpage.html
@@ -16,7 +16,7 @@
             <img src="1387766366881.jpg" width="1000" height"190"
         </p>
          <body>
-             <font size="+3"> <a href="http://www.puzzledragonx.com/"> Look Here</a> look the others characters</font>    
+                <a href="avatar.html">My avatar</a>
                       </body>
        
              </p>
