--- a/kdriving.html
+++ b/kdriving.html
@@ -5,7 +5,7 @@
     </head>
      <body>
          <p> There is traffic ahead and you are driving too fast and can't stop in time.</p>
-         <p style="text-align: center; font-size: 60px; color: red"> You Died. Failed. Try Again.</p>
-         <img src="http://s13.postimg.org/3lmwbeq1z/2014_mustang_gt_crash.jpg" width="1000" height="1000">
+         <p style="text-align: center; font-size: 60px; color: red"> You Died. You hit truck and your mustang GT is crush in completely and you are crushed. The crash did not kill you instantly and you suffered. Failed. Let's Try Again.</p>
+         <img src="http://cdnl.complex.com/m.php/CHANNEL_IMAGES/RIDES/2012/10/1_ahxin.jpg" width="1000" height="1000">
          </body>
     </html>
