--- a/game/step.html
+++ b/game/step.html
@@ -5,7 +5,7 @@
     </head>
      <body>
          <p>You know how to escape a deadlock because your friend knows how to to Judo and you learned. </p>
-         <p style= "text-align:center" >You win! You survive and after you got clear the cop got the rovver in the chest three times.</p>
+         <p style= "text-align:center" >You win! You survive and after you got clear the cop shoots the robber in the chest three times.</p>
                       </body>
        
             
