--- a/game/game.html
+++ b/game/game.html
@@ -6,19 +6,19 @@
     </head>   
      <body>
          <img src="http://imageshack.com/a/img844/3985/9kj.gif" width=" 250" height="150"/>
-         <p style=font-size:45px>
+         <p style="font-size:45px;font-family:'Faster One', cursive">
         Let's make a story together my name is Freddy and Nile. 
               </p>
          <p style="font-size:20px;font-family:'Faster One', cursive">
              You just graduated from college and you are free and you don't know what to do. 
              </p>
-         <p style=font-size:25px>
+         <p style="font-size:25px;font-family:'Faster One', cursive">
              What do you want to do?
              </p>
                 <ul>
-                    <li> <a href="driving.html">Driving Home In Your Band New Mustang GT</a> </li>
-                    <li> <a href="hanging.html">Hanging Out With Friends In Downtown</a></li>
-                    <li> <a href="bicycle.html">Taking your new bicycle For A Ride Around The Block</a></li>
+                    <li><a href="driving.html">Driving Home In Your Band New Mustang GT</a> </li>
+                    <li><a href="hanging.html">Hanging Out With Friends In Downtown</a></li>
+                    <li><a href="bicycle.html">Taking your new bicycle For A Ride Around The Block</a></li>
                 </ul>
          
                       </body>
