--- a/game/gohome.html
+++ b/game/gohome.html
@@ -3,6 +3,7 @@
     <head>
         <title> Let's Make A Story</title>
          <link rel="stylesheet" type="text/css" href="game.css">
+        <a href=lifeanddeath.html>home</a><br>
     </head>
      <body>
          <p style="font-size:30px"> You ride back home. You are safe. </p>
