--- a/game/hanging.html
+++ b/game/hanging.html
@@ -3,6 +3,7 @@
     <head>
         <title> Let's Make A Story</title>
         <link rel="stylesheet" type="text/css" href="game.css">
+        <a href=lifeanddeath.html>home</a><br>
     </head>
      <body>
       <p style=font-size:20px> You call up your friends and ask whether or not they want to hang out at downtown. They all said "yes." But one of your friend name Sally needed a ride so you told her that you will pick her up in 10 min. You pick her up and meet up with your others friends in the parking lot. You all walk in the store and walk around to see what to buy. All suddenly you were in Nike store, there was robbery occuring. All of you are scared and laying down on the ground. There was a mall cop and is pointing his gun at the robber and the robber pick you up and held the gun pointing to your head.</p>
