--- a/game/kriding.html
+++ b/game/kriding.html
@@ -3,9 +3,12 @@
     <head>
         <title> Let's Make A Story</title>
         <link rel="stylesheet" href=game.css>
+        <a href=lifeanddeath.html>home</a><br>
     </head>
-     <body>
-         <p style=font-size:20px> You want to ride some more and you were feeling a little tired and you are falling asleep and BANG you are hit by a car and you flew two feet.</p>
+    <body>
+         <p style=font-size:20px> You want to ride some more and you were feeling a little tired and you are falling asleep</p> 
+         <p>BANG you are hit by a car and you flew two feet.</p>
          <p style="text-align: center; font-size: 60px; color: red"> YOU DIED! FAIL!</p>
+         
          </body>
     </html>
