--- a/game/step.html
+++ b/game/step.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title> Let's Make A Story</title>
+        <a href=lifeanddeath.html>home</a><br>
     </head>
      <body>
          <p>You know how to escape a deadlock because your friend knows how to to Judo and you learned. </p>
