--- a/game/hanging.html
+++ b/game/hanging.html
@@ -6,9 +6,9 @@
         <a href=lifeanddeath.html>home</a><br>
     </head>
      <body>
-      <p style=font-size:20px> You call up your friends and ask whether or not they want to hang out at downtown. They all said "yes." But one of your friend name Sally needed a ride so you told her that you will pick her up in 10 min. You pick her up and meet up with your others friends in the parking lot. You all walk in the store and walk around to see what to buy. All suddenly you were in Nike store, there was robbery occuring. All of you are scared and laying down on the ground. There was a mall cop and is pointing his gun at the robber and the robber pick you up and held the gun pointing to your head.</p>
+      <p style=font-size:30px; font-family:'Sonsie One', cursive> You call up your friends and ask whether or not they want to hang out at downtown. They all said "yes." But one of your friend name Sally needed a ride so you told her that you will pick her up in 10 min. You pick her up and meet up with your others friends in the parking lot. You all walk in the store and walk around to see what to buy. All suddenly you were in Nike store, there was robbery occuring. All of you are scared and laying down on the ground. There was a mall cop and he points his gun at the robber. The robber pick you up and held the gun pointing to your head.</p>
          
-         <p style=font-size:20px> The robber says "Cop you better not be stupid." This kid is pretty young and you don't want the death of this kid in your conscience. The cop's hands were shaking and he is scared.</p>
+         <p style=font-size:20px; font-family: accesskey=' Black Ops One', cursive> The robber says "Cop you better not be stupid." This kid is pretty young and you don't want the death of this kid in your conscience. The cop's hands were shaking and he is scared.</p>
          <ul>
                     <li> <a href="step.html">You step on his foot and let the cop shoot the robber</a> </li>
                     <li> <a href="wait.html">Wait...you'll see</a></li>
