--- a/game/lifeanddeath.html
+++ b/game/lifeanddeath.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="driving.html">Driving Home In Your Band New Mustang GT</a> </li>
                     <li><a href="hanging.html">Hanging Out With Friends In Downtown</a></li>
-                    <li><a href="bicycle.html">Taking your new bicycle For A Ride Around The Block</a></li>
+                    <li><a href="Bicycle.html">Taking your new bicycle For A Ride Around The Block</a></li>
                 </ul>
          
                       </body>
